Usunięcie warningów